# skill-manager

./: .gitignore  README.md
.windsurf/rules/: tauri-only.md
.windsurf/skills/auto-screenshot/: SKILL.md
.windsurf/skills/frontend-component-design/: SKILL.md
.windsurf/skills/gsap-fundamentals/: _meta.json
.windsurf/skills/gsap-router/: _meta.json
.windsurf/skills/gsap-scrolltrigger/: _meta.json
.windsurf/skills/gsap-sequencing/: _meta.json
.windsurf/skills/image-compress/: SKILL.md
.windsurf/skills/mobile-automation/: SKILL.md
.windsurf/skills/qiniu-upload/: SKILL.md
.windsurf/skills/readme-images/: SKILL.md
.windsurf/skills/release/: SKILL.md
design-system/: MASTER.md
design-system/pages/: diff-viewer.md  git-import.md  install-wizard.md  onboarding.md  project-detail.md  project-list.md  settings.md  skill-detail.md  skill-editor.md  skill-list.md  skills-sh-store.md  sync-center.md  update-manager.md
docs/: PRD.md  database-design.md  pages.md  skill-explorer-design.md  skills-main-skill-路径发现逻辑.md  todo.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  models.rs
src-tauri/src/commands/: deployments.rs  git.rs  mod.rs  projects.rs  scanner.rs  settings.rs  skills.rs  skillssh.rs  utils.rs  watcher.rs
src-tauri/src/db/: migrations.rs  pool.rs
(+60 files in other folders)
