[package]
name = "skills-manager"
version = "0.1.0"
description = "跨平台 AI 编码工具 Skill 统一管理器"
authors = ["congwa"]
edition = "2021"

[lib]
name = "skills_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
walkdir = "2"
glob = "0.3"
notify = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
